images/ipc4/oc-mirror/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: registry
  labels:
    app.kubernetes.io/name: registry
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: registry
    app.kubernetes.io/part-of: bootstrap
spec:
  terminationGracePeriodSeconds: 10
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: registry
      image: docker.io/library/registry:2
      ports:
        - containerPort: 5000
          name: registry-port
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        capabilities:
          drop:
            - ALL
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 500m
          memory: 512Mi
      volumeMounts:
        - name: registry-data
          mountPath: /var/lib/registry
  volumes:
    - name: registry-data
      persistentVolumeClaim:
        claimName: registry-pvc
