images/ipc4/oc-mirror/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app.kubernetes.io/name: registry-service
    app.kubernetes.io/part-of: bootstrap
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app.kubernetes.io/name: registry
