images/ipc4/oc-mirror/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: registry
  labels:
    app.kubernetes.io/name: registry-route
    app.kubernetes.io/part-of: bootstrap
spec:
  to:
    kind: Service
    name: registry
  port:
    targetPort: 5000
  tls:
    termination: edge
